# tl-ai-keyframe-workbench

./: .gitignore  LICENSE  README.md  index.html
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: assets.py  auth.py  frames.py  generation_tasks.py  health.py  llm.py  mcp_docs.py  media.py  projects.py  public_assets.py  router.py  scripts.py  video_segments.py
backend/app/cli/: framelab.py
backend/app/core/: __init__.py  config.py  exceptions.py  security.py
backend/app/db/: session.py
backend/app/integrations/: __init__.py  apiz_generation.py  llm.py  object_storage.py  volcengine_image.py
backend/app/mcp/: __init__.py  streamable_http_handler.py  tools.py
backend/app/models/: __init__.py
backend/app/schemas/: asset.py  auth.py  frame.py  generation_task.py  media.py  project.py  public_asset.py  script.py
backend/app/sdk/: __init__.py  client.py
backend/app/services/: database_store.py  image_prompt_requirements.py  memory_store.py
backend/app/workers/: generation_worker.py
backend/tests/: conftest.py  test_auth.py  test_frame_versions.py  test_generation_tasks.py  test_health.py  test_llm.py  test_mcp_surface.py  test_media_uploads.py  test_minimal_loop.py  test_public_assets.py
desktop/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.electron.json  vite.config.ts
desktop/electron/: main.ts  (+1 more)
docs/: cloud-resources.md  framelab-image-requirements.md  framework-design.md  schema-design.md  web-test-plan-and-report.md
(+6 files in other folders)
