[project]
name = "framelab-backend"
version = "0.1.0"
description = "FastAPI backend for FrameLab"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.3.0",
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncmy>=0.2.9",
  "alembic>=1.13.0",
  "python-multipart>=0.0.9",
  "tos>=2.7.1"
]

[project.scripts]
framelab = "app.cli.framelab:main"

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.4.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
